--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,16 @@
 language: go
 go:
-  - 1.3.1
-  - tip
-
+- 1.3.1
+- tip
 install:
-  - export GOPATH=`pwd`
-
+- export GOPATH=`pwd`
 script:
- - go run main.go || echo ""
- - ls
+- go run main.go || echo ""
+- ls
+deploy:
+  provider: releases
+  api_key:
+    secure: VcetYNrSOPamkN8WBi576vJfvhWAV6B4f26djeGbbFyjOFWuFG8ukXWZEj6kXtjxeaELrg5B6MQ5K4QaS2/vRwYxXc00eq6+Huyo8b8HPIHuXDUC+NK0pTBIa+cRQH0/7E2SRZSO+2fVE1c/XObw9/Pq6YZLxjpaxbmBgz3G7KE=
+  file: "./free-slots"
+  on:
+    repo: rmcgibbo/free-slots
