--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,16 @@
 language: go
+
 go:
-- 1.3.1
-- tip
+  - 1.3.1
+  - tip
+
 install:
-- export GOPATH=`pwd`
+  - export GOPATH=`pwd`
+
 script:
-- go run main.go || echo ""
-- ls
+  - go run main.go || echo ""
+  - ls
+
 deploy:
   provider: releases
   api_key:
@@ -14,3 +18,5 @@ deploy:
   file: "./free-slots"
   on:
     repo: rmcgibbo/free-slots
+    tags: true
+    all_branches: true
